k8files/chykee67todoapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: chykee67todoapp
  labels:
    app: chykee67todoapp
spec:
  containers:
    - name: frontend-server
      image: chykee67/nextjs_app:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 3000
          name: frontend-port
    - name: backend-server
      image: chykee67/django_graphql_app:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 3031
          name: backend-port
      volumeMounts:
        - mountPath: /app/media
          name: app-storage
          subPath: media
        - mountPath: /app/static
          name: app-storage
          subPath: static
    - name: nginx-server
      image: chykee67/nginx_server:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          name: nginx-port
      volumeMounts:
        - mountPath: /app/media
          name: app-storage
          subPath: media
        - mountPath: /app/static
          name: app-storage
          subPath: static

  volumes:
    - name: app-storage
      persistentVolumeClaim:
        claimName: app-pvc
