k8files/app-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: chykee67todoapp
  ports:
    - protocol: TCP
      name: nginx-svc-port
      port: 80
      targetPort: nginx-port
  type: ClusterIP
